<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F9">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="514dp"
            android:layout_height="197dp"
            android:background="@drawable/yoots2"
            android:gravity="bottom|clip_horizontal"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingEnd="0dp">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:paddingLeft="10dp"
            android:text="Meet other Yoots"
            android:textColor="#ff9be3"
            android:textSize="27sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/login_email_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/username_email"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="5dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textColorHint="#FA80D8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/forgot"
                android:textSize="14sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="#FA80D8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/remember_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#10507A"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"/>
        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/sign_up_border"
            android:onClick="loginApi"
            android:text="LOGIN"
            android:textColor="#fff"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/dont_have_account"/>

            <TextView
                android:id="@+id/go_to_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="#FA80D8"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>