<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="267dp"
            android:background="@drawable/yinyang2"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingEnd="0dp">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:paddingLeft="10dp"
            android:text="Become part of YYG!"
            android:textColor="#fd3d3c"
            android:textSize="27sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/signup_email_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/username_email"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="5dp"
                android:hint="Twitter ID (E.g ProjectYinYang)"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textColorHint="#fd3d3c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/forgot"
                android:textSize="14sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:textColorHint="#fd3d3c" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/password"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textColorHint="#fd3d3c" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:buttonTint="#10507A" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"/>
        </LinearLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/sign_up_border"
            android:onClick="loginApi"
            android:text="Sign Up"
            android:textColor="#fff"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Already have an account?"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="Login"
                android:textColor="#fd3d3c"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>